<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BabyLog</string>
    <string name="date">Дата</string>
    <string name="weight">Вес</string>
    <string name="eat">Еда</string>
    <string name="feed">Кормление</string>
    <string name="comments">Примечания</string>
    <string name="kilo">кг</string>
    <string name="gramm">г</string>
    <string name="empty">Пусто</string>
    <string name="add">Добавить</string>
    <string name="delete_day">"Удалить запись за: "</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="backup_write_error">Проблема с записью на SD-карту!</string>
    <string name="backup_no_sd">Внимание! SD-карта не доступна, бэкап не будет работать!</string>
    <string name="backup">Бэкапы</string>
    <string name="day_night">День/ночь</string>
    <string name="app_name_backup">Backup</string>
    <string name="app_name_edit">Edit</string>
    <string name="restore_backup">"Восстановить из бэкапа: "</string>
    <string name="delete_backup">"Удалить бэкап: "</string>
    <string name="row_count">строк</string>
    <string name="bytes">байт</string>
    <string name="appbar_scrolling_view_behaviour">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="snack_delete">Удалено</string>
    <string name="snack_restore">Вернуть!</string>

    <string-array name="months">
        <item>января</item>
        <item>ферваля</item>
        <item>марта</item>
        <item>апреля</item>
        <item>мая</item>
        <item>июня</item>
        <item>июля</item>
        <item>августа</item>
        <item>сентября</item>
        <item>октября</item>
        <item>ноября</item>
        <item>декабря</item>
    </string-array>

</resources>
